# kmapvis

./: CMakeLists.txt  README.md  kmap_gui.cpp  kmap_gui.hpp  kmap_solver.cpp  kmap_solver.hpp  main.cpp  main_gui.cpp
include/: KMapGrid.hpp  KMapVisualizer.hpp  Shader.hpp
shaders/: grid.frag  grid.vert
src/: KMapGrid.cpp  KMapVisualizer.cpp  Shader.cpp  main.cpp
